-- Customer Table
CREATE TABLE IF NOT EXISTS ods.customer (
  id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  first_name VARCHAR(100) NOT NULL,
  last_name VARCHAR(100) NOT NULL,
  gender VARCHAR(10) CHECK (gender IN ('Female', 'Male')),
  email VARCHAR(255) NOT NULL 
    CHECK (email ~* '^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$'),
  billing_address TEXT,
  shipping_address TEXT NOT NULL
);

-- Sales Order Table
CREATE TABLE IF NOT EXISTS ods.salesorder (
  id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  customer_id INT NOT NULL,
  order_number VARCHAR(50) UNIQUE NOT NULL,
  created_at TIMESTAMP WITH TIME ZONE NOT NULL,
  modified_at TIMESTAMP WITH TIME ZONE NOT NULL CHECK (modified_at >= created_at),
  order_total NUMERIC(10, 2) NOT NULL CHECK (order_total >= 0),
  total_qty_ordered INT NOT NULL CHECK (total_qty_ordered >= 0),
  FOREIGN KEY (customer_id) REFERENCES ods.customer(id) ON DELETE CASCADE ON UPDATE CASCADE
);

-- Product Table
CREATE TABLE IF NOT EXISTS ods.product (
  product_id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  product_sku VARCHAR(50) UNIQUE NOT NULL,
  product_name VARCHAR(255) NOT NULL
);

-- Sales Order Item Table
CREATE TABLE IF NOT EXISTS ods.salesorderitem (
  item_id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  order_id INT NOT NULL,
  product_id INT NOT NULL,
  qty_ordered INT NOT NULL CHECK (qty_ordered >= 0),
  price NUMERIC(10, 2) NOT NULL CHECK (price >= 0),
  line_total NUMERIC(12, 2) NOT NULL CHECK (line_total >= 0),
  created_at TIMESTAMP WITH TIME ZONE NOT NULL,
  modified_at TIMESTAMP WITH TIME ZONE NOT NULL CHECK (modified_at >= created_at),
  FOREIGN KEY (order_id) REFERENCES ods.salesorder(id) ON DELETE CASCADE ON UPDATE CASCADE,
  FOREIGN KEY (product_id) REFERENCES ods.product(product_id) ON DELETE CASCADE ON UPDATE CASCADE
);
